# brainfCompiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  bfCompiler  bfTester  bf_interp.c  brainfCompiler  coverage.info  example.txt  interp.c  interp.h  main.c  matches.txt  ms.h  ms_parser.c  out.txt  output.txt  parser.c  parser.h  parser_syntax.txt  runTests.c  runtests.c.bak  schema.txt  test.c  test.h  testOutput.txt  utils.c  utils.h  val.txt  val_output.txt  weird.txt
include/: exp.h  interp.h  ir.h  lexer.h  parser.h  reader.h  semantics.h  stmt.h  structs.h  test.h  utils.h  value.h
newtests/: atomic10.txt
parser_tests/: array1.txt  array3.txt  atomic14.txt  atomic15.txt  atomic2.txt  binary1.txt  binary23.txt  binary24.txt  binary25.txt  parenthesis7.txt  prec11.txt  prec12.txt  prec14.txt  prec17.txt  prec5.txt  prec7.txt  prec8.txt  string_backslash.txt  string_tab.txt
semantic_tests/: test_ERR_BAD_ELSE_01.lang  test_ERR_INV_ARR_01.lang  test_ERR_INV_ARR_02.lang  test_ERR_INV_ARR_03.lang  test_ERR_INV_ARR_04.lang  test_ERR_INV_ARR_06.lang  test_ERR_INV_EXP_01.lang  test_ERR_NO_VAR01.lang  test_ERR_UNEXP_CHAR_01.lang  test_ERR_UNMATCHED_QUOTE_01.lang  test_valid_02.lang  test_valid_05.lang
src/: CMakeLists.txt  check_semantics.c  exp.c  interp.c  ir.c  lexer.c  main.c  parse_file.c  parser.c  reader.c  runTests.c  semantics.c  stmt.c  test.c  utils.c  value.c
tests/: CMakeLists.txt  arith10.txt  arith3.txt  arith5.txt  array2.txt  array5.txt  atomic10.txt  atomic11.txt  atomic12.txt  atomic13.txt  atomic14.txt  atomic15.txt  atomic2.txt  atomic3.txt  atomic4.txt  atomic5.txt  atomic6.txt  atomic7.txt  atomic8.txt  atomic9.txt  binary1.txt  binary10.txt  binary11.txt  binary12.txt  binary13.txt  binary14.txt  binary15.txt  binary16.txt  binary17.txt  binary18.txt  binary19.txt  binary2.txt  binary20.txt  binary21.txt  binary22.txt  binary23.txt  binary24.txt  binary25.txt  binary26.txt  binary27.txt  (+58 more)
tests/invalid/: test_ERR_INV_ARR_03.txt  test_ERR_INV_ARR_05.txt  test_ERR_INV_ARR_07.txt  test_ERR_INV_ESC_01.txt  test_ERR_INV_EXP_02.txt
tests/parser/: CMakeLists.txt  array6.txt  atomic3.txt  atomic6.txt  atomic7.txt  binary12.txt  binary14.txt  binary17.txt  binary19.txt  binary20.txt  binary26.txt  binary4.txt  f_arr_var.txt  f_init_var.txt  f_inv_exp_03.txt  f_unary_a.txt  parenthesis5.txt  parenthesis6.txt  parenthesis8.txt  prec13.txt  prec2.txt  prec3.txt  prec6.txt  stmt_for_b.txt  stmt_for_c.txt  stmt_for_d.txt  stmt_for_e.txt  stmt_for_f.txt  stmt_while_b.txt  stmt_while_c.txt  string_newline.txt
tests/sem/: CMakeLists.txt  f_immut.txt  f_inv_arr_1b.txt  f_inv_arr_1c.txt  f_inv_arr_1d.txt  f_inv_arr_5.txt  p_branch_1.txt  p_branch_3.txt  p_vars_1.txt
tests/valid/: CMakeLists.txt  array4.txt  array7.txt  atomic1.txt  atomic12.txt  atomic13.txt  atomic4.txt  atomic5.txt  atomic8.txt  binary11.txt  binary16.txt  binary21.txt  binary28.txt  binary3.txt  binary5.txt  binary6.txt  parenthesis9.txt  prec1.txt  prec15.txt  sem_test_valid_03.txt  sem_test_valid_06.txt
